crates/wac-parser/tests/parser/fail/bad-alias.wac
package test:comp;

type u32 = x;